# BigBasketScraper

./: .gitignore  README.md  pyproject.toml
core/base/: main.py
core/db/: db.py
core/loggers/: native_logger.py
core/task_destribution/: thread_task_destribution.py
helpers/: snippets.py
managers/: bigbasket_manager.py
resources/ua/: agents.json
services/: category_scraper.py  products_scraper.py
settings/: db.json  general.json  proxies.json
sql/: models.sql
