[tool.poetry]
name = "upworkproject"
version = "0.1.0"
description = ""
authors = ["Valg1s <antonsegodin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
hrequests = "^0.9.2"
aiohttp = "^3.12.15"
curl-cffi = "^0.13.0"
aiopg = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
